--- a/Ecommerce/src/app/affiche-produit/affiche-produit.component.html
+++ b/Ecommerce/src/app/affiche-produit/affiche-produit.component.html
@@ -1,5 +1,5 @@
 <h3>Liste Produit</h3>
-
+<div [ngClass]="{'alert alert-warning text-center': message!==''}">{{message}}</div>
 <div class="container">
     <div class="card" style="width: 18rem;" *ngFor="let produit of listProduit; let i =index">
         <img src="{{produit.photo}}" class="card-img-top" alt="...">
@@ -8,7 +8,7 @@
           <p class="card-text">{{produit.description}}</p>
           <p class="card-text-prix">{{produit.prix}} DH</p>
           <a class="btn btn-outline-primary me-2" (click)="display(i)">Voir</a>
-          <a href="#" class="btn btn-primary ">Ajouter au panier</a>
+          <a class="btn btn-primary" (click)="AjouterPanier(produit)">Ajout panier</a>
          
         </div>
       </div>
