--- a/Ecommerce/src/app/app.component.html
+++ b/Ecommerce/src/app/app.component.html
@@ -31,7 +31,8 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success me-2" type="submit">Search</button>
       </form>
-      <button class="btn btn-outline-danger " type="submit">Logout</button>
+      <button class="btn btn-outline-danger me-2 " type="submit">Logout</button>
+      <button class="btn btn-outline-warning " routerLink="panier" type="submit">Panier</button>
     </div>
   </div>
 </nav>
