--- a/Ecommerce/src/app/details-produit/details-produit.component.html
+++ b/Ecommerce/src/app/details-produit/details-produit.component.html
@@ -1,21 +1,25 @@
-<h3>Détails Produit </h3> 
-<div class="container">
+
+<div class="containers">
+  <h3>Détails Produit </h3> 
+  <button class="btn btn-outline-primary mx-5 mb-3" (click)="onBack()">Retour</button>
   <div [ngClass]="{'alert alert-warning text-center': message!==''}">{{message}}</div>
-    <div class="card mb-3" *ngFor="let produit of singleProduit">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="{{produit.photo}}" class="img-fluid rounded-start" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-            <button class="btn btn-outline-primary me-5" (click)="onBack()">Retour</button>
-            <button class="btn btn-warning btn-md float-end" (click)="AjoutPanier(produit)">Ajout panier</button>
-             
-              <h5 class="card-title">{{produit.name | titlecase}}</h5>
-              <p class="card-text">{{produit.prix}} DH</p>
-              <p class="card-text"><small class="text-muted">{{produit.description}}</small></p>
-               </div>
-          </div>
-        </div>
-      </div>
+    
+</div>
+
+<div class="container-detail">
+  
+  <div class="card text-bg-light mb-3 mt-4" style="width: 55vh;" *ngFor="let produit of singleProduit">
+    <img src="{{produit.photo}}" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">{{produit.name | titlecase}} - {{produit.prix}} DH</h5>
+      <p class="card-text">Allergène : </div>
+    <ul class="list-group list-group-flush">
+     
+      <li class="list-group-item">{{produit.description}}</li>
+    </ul>
+    <div class="card-body">
+      <a href="#" class="card-link">Ratings</a>
+   </div>
+    <button class="btn btn-warning btn-lg float-end" (click)="AjoutPanier(produit)">Ajout panier</button>
+  </div>
 </div>
