--- a/Ecommerce/src/app/details-produit/details-produit.component.scss
+++ b/Ecommerce/src/app/details-produit/details-produit.component.scss
@@ -1,26 +1,25 @@
 
 h3{
-    margin: 20px;
+    margin: 15px;
 }
-.container{
+.container-detail{
 
-    margin: 10px;
-    max-width: 150vh;
-    font-size: 20px;
+    display: grid;
+    justify-content: center;
+    font-size: 16px;
+    background-color: rgb(248, 216, 157);
 
     img{
-        width: 120vh;
-        height: 50vh;
-        border-radius: 15%;
-        padding: 15px;
+        width: 54vh;
+        height: 45vh;
+        border-radius: 10%;
+        padding: 10px;
         
     }
     .card-title{
         font-size:xx-large;
 
     }
-    button{
-       margin-bottom:30px;
-    }
+   
 
 }
