travail sur googlemap

--- a/Ecommerce/src/app/details-produit/details-produit.component.html
+++ b/Ecommerce/src/app/details-produit/details-produit.component.html
@@ -2,7 +2,7 @@
 <div class="containers">
   <h3>Détails Produit </h3> 
   <button class="btn btn-outline-primary mx-5 mb-3" (click)="onBack()">Retour</button>
-  <div [ngClass]="{'alert alert-warning text-center': message!==''}">{{message}}</div>
+  <div [ngClass]="{'alert alert-warning text-center stick-top': message!==''}">{{message}}</div>
     
 </div>
 
