--- a/Ecommerce/src/app/panier/panier.component.html
+++ b/Ecommerce/src/app/panier/panier.component.html
@@ -82,7 +82,7 @@
         
         <!-- Modal footer -->
         <div class="modal-footer">
-          <button type="button" class="btn btn-succes me-5" data-dismiss="modal">Suivant</button><button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-succes me-5" data-dismiss="modal">Enregistrer</button><button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
         </div>
         
       </div>
