travail sur panier

--- a/Ecommerce/src/app/affiche-produit/affiche-produit.component.html
+++ b/Ecommerce/src/app/affiche-produit/affiche-produit.component.html
@@ -1,7 +1,7 @@
 
 <app-carousel></app-carousel>
 <h3>Liste Produit</h3>
-<div [ngClass]="{'alert alert-warning text-center sticky-top': message!==''}">{{message}}</div>
+<div [ngClass]="{'alert alert-success text-center sticky-top': message!==''}">{{message}}</div>
 <div class="container">
     <div class="card" style="width: 18rem;" *ngFor="let produit of listProduit; let i =index">
         <img src="{{produit.photo}}" class="card-img-top" alt="...">
@@ -9,9 +9,8 @@
           <h5 class="card-title">{{produit.name}}</h5>
           <p class="card-text">{{produit.description}}</p>
           <p class="card-text-prix">{{produit.prix}} DH</p>
-          <a class="btn btn-outline-primary me-2" (click)="display(i)">Voir</a>
-          <a class="btn btn-warning" (click)="AjouterPanier(produit)">Ajout panier</a>
-         
-        </div>
+          <a class="btn btn-outline-primary btn-lg me-2" (click)="display(i)">Voir</a>
+         <!-- <button class="{{ (!produit.selected)? 'btn btn-warning': 'clicked'}}" (click)="selected(produit)">Ajout panier</button>-->
+      </div>
       </div>
 </div>
