--- a/Ecommerce/src/app/app.component.html
+++ b/Ecommerce/src/app/app.component.html
@@ -1,13 +1,15 @@
-<nav class="navbar navbar-expand-lg bg-light">
+
+
+<nav class="navbar navbar-expand-lg bg-light ">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Ecommerce</a>
+    <a class="navbar-brand" routerLink="/produit">Ecommerce</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" routerLink="/produit">Produit</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
@@ -29,13 +31,17 @@
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success me-2" type="submit">Search</button>
+        <button class="btn btn-success me-2" type="submit">Search</button>
       </form>
-      <button class="btn btn-outline-danger me-2 " type="submit">Logout</button>
-      <button class="btn btn-warning " routerLink="panier" type="submit">Panier</button>
+      <button class="btn btn-danger me-2 " type="submit">Logout</button>
+      <button class="btn btn-warning " routerLink="panier" type="submit"><span><i class="fas fa-shopping-cart"></i></span>Panier</button>
     </div>
   </div>
 </nav>
+
+
+
+
 <router-outlet></router-outlet>
 
 
@@ -43,7 +49,7 @@
 
 
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted mt-5">
+<footer class="text-center text-lg-start bg-dark text-muted mt-5">
   <!-- Section: Social media -->
   <section
     class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
