--- a/Ecommerce/src/app/details-produit/details-produit.component.scss
+++ b/Ecommerce/src/app/details-produit/details-produit.component.scss
@@ -1,5 +1,5 @@
 
-h3{
+h5{
     margin: 15px;
 }
 .container-detail{
@@ -7,7 +7,7 @@ h3{
     display: grid;
     justify-content: center;
     font-size: 16px;
-    background-color: rgb(248, 216, 157);
+    background-color: rgba(255, 166, 0, 0.1);
 
     img{
         width: 54vh;
