--- a/Ecommerce/src/app/panier/panier.component.html
+++ b/Ecommerce/src/app/panier/panier.component.html
@@ -1,33 +1,54 @@
-<h3>Panier Produit </h3> 
+
+<button class="btn btn-outline-primary mx-5 mb-2 mt-3" (click)="onBack()">Ajouter Produit</button>
+
 <div class="container">
     
-    <div class="card mb-3" *ngFor="let produit of panier; let i =index">
+  <div class="row">
+    <span *ngIf="somme == 0" class="alert alert-warning"><h3>Panier vide, Merci d'ajouter des produits</h3></span>
+ 
+   <div class="col-md-8">
+    <div *ngIf="somme != 0" class="alert alert-info"><h3>Panier ({{nbr_article}})</h3></div>
+ 
+     <div class="card text-bg-light mb-3" *ngFor="let produit of panier; let i =index">
         <div class="row g-0">
-          <div class="col-md-4">
+          <div class="col-md-2">
             <img src="{{produit.photo}}" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
-            <button class="btn btn-outline-danger me-5 float-end" (click)="supprimer(i)">Supprimer</button>
              
               <h5 class="card-title">{{produit.name | titlecase}} </h5>
-              <p class="card-text">{{produit.prix}} DH</p>
               <p class="card-text"><small class="text-muted">{{produit.description}}</small></p>
+               </div>
+          </div>
+          <div class="col-md-2">
+            <div class="card-body">
+             <p class="card-text float-end">{{produit.prix}} * {{produit.nbr}} Dhs</p>
+             <button class="btn btn-outline-danger float-end" (click)="supprimer(i)">supprimer</button>
+           
                </div>
           </div>
          
         </div>
        
       </div>
-      <div [ngClass]="{'result':somme!= 0}" *ngIf="somme!= 0">
-        <tr><td style="width:85%">Total des achats</td><td>{{somme}} DH</td></tr> 
-        <!-- Button to Open the Modal -->
-        <div class="container2 mt-4 mb-5">     
-          <button type="button" class="btn btn-primary float-end" data-toggle="modal" data-target="#myModal">
-            Suivant
-          </button></div>
+    </div>
+    <div class="col-md-4">
+
+       <div *ngIf="somme != 0" class="alert alert-info" role="alert">
+        <h4 class="alert-heading">RESUME PANIER</h4>
+        <hr>
+        <p class="mt-2">Frais de livraison non inclus à ce stade.</p>
+        <span class="text mt-3">Sous-total </span><span class="text mt-3 float-end"> {{somme}} Dhs</span>
+
+        <p class="mt-4">Livraison immédiate. Dépendant de votre localisation.</p>
+        <button type="button" class="btn btn-primary btn-lg mt-3" data-toggle="modal" data-target="#myModal">
+          Commander {{somme}} Dhs
+        </button>
       </div>
-      
+     
+    </div>
+    </div>    
 
    
 
