--- a/Ecommerce/src/app/carousel/carousel.component.html
+++ b/Ecommerce/src/app/carousel/carousel.component.html
@@ -1,5 +1,14 @@
 <div class="container-carousel">
-<div class="carousel"><mdb-carousel [controls]="true" [indicators]="true" [animation]="'fade'">
+  <div class="alert alert-light div1">
+    <nav class="nav flex-lg-column">
+      <a class="nav-link active" aria-current="page" href="#">Plat principal</a>
+      <a class="nav-link" href="#">Accompagnement</a>
+      <a class="nav-link" href="#">Boisson</a>
+      <a class="nav-link disabled">Autre</a>
+    </nav>
+  </div>
+<div class="carousel">
+  <mdb-carousel [controls]="true" [indicators]="true" [animation]="'fade'">
     <mdb-carousel-item>
       <img
         src="https://mdbootstrap.com/img/Photos/Slides/img%20(15).webp"
@@ -35,5 +44,8 @@
     </mdb-carousel-item>
   </mdb-carousel>
 </div>
+<div class="alert alert-light div2">
 
+Lorem ipsum dolor, sit amet<br> consectetur adipisicing elit.<br> Corporisremque quod odio quasi.
+</div>
 </div>
