--- a/Ecommerce/src/app/affiche-produit/affiche-produit.component.scss
+++ b/Ecommerce/src/app/affiche-produit/affiche-produit.component.scss
@@ -1,7 +1,8 @@
 .container{
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    gap: 10px;
+    grid-template-columns: repeat(4, 1fr) ;
+    gap: 5px;
+   
     
 }
 h3{
