--- a/Ecommerce/src/app/app.component.html
+++ b/Ecommerce/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-
+<app-nav></app-nav>
 <nav class="navbar navbar-expand-lg bg-light ">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/produit">Ecommerce</a>
