--- a/Ecommerce/src/app/details-produit/details-produit.component.scss
+++ b/Ecommerce/src/app/details-produit/details-produit.component.scss
@@ -1,25 +1,38 @@
 
+
 h5{
     margin: 15px;
 }
-.container-detail{
-
-    display: grid;
-    justify-content: center;
-    font-size: 16px;
-    background-color: rgba(255, 166, 0, 0.1);
+.text{
+    font-size: 24px;
+    font-weight: bold;
+}
+.card{
+    height: 40vh;
+    
 
     img{
-        width: 54vh;
-        height: 45vh;
-        border-radius: 10%;
-        padding: 10px;
-        
+        width:36vh;
+        height: 35vh;
+        padding: 5px;
+        border-radius: 5%;
     }
     .card-title{
-        font-size:xx-large;
+        font-size: 24px;
+        padding: 0;
+
 
     }
-   
-
+    .card-text{
+        font-size: 20px;
+        font-weight: bold;
+    }
+    .text-muted{
+        font-size: medium;
+    }
+    .prix{
+        font-size: 30px;
+        font-weight: bold;
+    }
+    
 }
