--- a/Ecommerce/src/app/panier/panier.component.html
+++ b/Ecommerce/src/app/panier/panier.component.html
@@ -6,7 +6,7 @@
   <div class="row">
     <span *ngIf="somme == 0" class="alert alert-warning"><h3>Panier vide, Merci d'ajouter des produits</h3></span>
  
-   <div class="col-md-8">
+   <div class="col-md-9">
     <div *ngIf="somme != 0" class="alert alert-info"><h3>Panier ({{nbr_article}})</h3></div>
  
      <div class="card text-bg-light mb-3" *ngFor="let produit of panier; let i =index">
@@ -33,16 +33,18 @@
        
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
 
        <div *ngIf="somme != 0" class="alert alert-info" role="alert">
         <h4 class="alert-heading">RESUME PANIER</h4>
         <hr>
-        <p class="mt-2">Frais de livraison non inclus à ce stade.</p>
-        <span class="text mt-3">Sous-total </span><span class="text mt-3 float-end"> {{somme}} Dhs</span>
-
-        <p class="mt-4">Livraison immédiate. Dépendant de votre localisation.</p>
-        <button type="button" class="btn btn-primary btn-lg mt-3" data-toggle="modal" data-target="#myModal">
+        
+        <div class="row">
+          <div class="col text mt-3">Sous-total </div><div class="col text mt-3">{{somme}} Dhs</div>
+        </div>
+        <hr><p class="mt-2">Frais de livraison non inclus à ce stade. Livraison <b>immédiate</b>.<br>Dépendant de votre localisation.</p>
+       
+            <button type="button" class="btn btn-warning btn-lg mt-3 m-3" data-toggle="modal" data-target="#myModal">
           Commander {{somme}} Dhs
         </button>
       </div>
