--- a/Ecommerce/src/app/carousel/carousel.component.html
+++ b/Ecommerce/src/app/carousel/carousel.component.html
@@ -1,12 +1,17 @@
 <div class="container-carousel">
-  <div class="alert alert-light div1">
-    <nav class="nav flex-lg-column">
-      <a class="nav-link active" aria-current="page" href="#">Plat principal</a>
+
+  <div class="alert alert-secondary div1">
+    <nav class="nav flex-column">
+      <a class="nav-link active"  href="#">Viande Braisé au charbon</a>
       <a class="nav-link" href="#">Accompagnement</a>
-      <a class="nav-link" href="#">Boisson</a>
-      <a class="nav-link disabled">Autre</a>
+      <a class="nav-link" href="#">Boisson chaude et froide</a>
+      <a class="nav-link disabled">Plat sur commande</a>
+      <a class="nav-link disabled">Carte à vin</a>
+      <a class="nav-link disabled">Plat marocain</a>
+      <a class="nav-link disabled">Casse croute</a>
     </nav>
   </div>
+
 <div class="carousel">
   <mdb-carousel [controls]="true" [indicators]="true" [animation]="'fade'">
     <mdb-carousel-item>
@@ -44,8 +49,16 @@
     </mdb-carousel-item>
   </mdb-carousel>
 </div>
-<div class="alert alert-light div2">
-
-Lorem ipsum dolor, sit amet<br> consectetur adipisicing elit.<br> Corporisremque quod odio quasi.
+<div class="alert alert-info div2">
+    <nav class="nav flex-column">
+      <a class="nav-link active" href="#">Viande Braisé au charbon</a>
+      <a class="nav-link" href="#">Accompagnement</a>
+      <a class="nav-link" href="#">Boisson chaude et froide</a>
+      <a class="nav-link disabled">Plat sur commande</a>
+      <a class="nav-link disabled">Carte à vin</a>
+      <a class="nav-link disabled">Plat marocain</a>
+      <a class="nav-link disabled">Casse croute</a>
+    </nav>
+  
 </div>
 </div>
