--- a/Ecommerce/src/app/carousel/carousel.component.html
+++ b/Ecommerce/src/app/carousel/carousel.component.html
@@ -1,55 +1,89 @@
 <div class="container-carousel">
 
-  <div class="alert alert-secondary div1">
+  
+<div class="alert alert-primary d-flex align-items-center div2" role="alert">
+ 
+  <div>
+    Menu <hr>
+  
     <nav class="nav flex-column">
-      <a class="nav-link active"  href="#">Viande Braisé au charbon</a>
+      <a class="nav-link active" href="#">Viande Braisé au charbon</a>
       <a class="nav-link" href="#">Accompagnement</a>
       <a class="nav-link" href="#">Boisson chaude et froide</a>
-      <a class="nav-link disabled">Plat sur commande</a>
-      <a class="nav-link disabled">Carte à vin</a>
-      <a class="nav-link disabled">Plat marocain</a>
-      <a class="nav-link disabled">Casse croute</a>
+      <a class="nav-link" href="#">Plat sur commande</a>
+      <a class="nav-link" href="#">Carte à vin</a>
+      <a class="nav-link" href="#">Plat marocain</a>
+      <a class="nav-link" href="#">Casse croute</a>
     </nav>
   </div>
+</div>
 
-<div class="carousel">
-  <mdb-carousel [controls]="true" [indicators]="true" [animation]="'fade'">
-    <mdb-carousel-item>
+<div class="carousel" >
+  <div class="alert alert-light">
+  <mdb-carousel [controls]="true" [indicators]="true" [animation]="'fade'" >
+    <mdb-carousel-item *ngFor="let elt of carousel">
       <img
-        src="https://mdbootstrap.com/img/Photos/Slides/img%20(15).webp"
+        src="{{elt.photo}}"
         class="d-block w-100"
         alt="..."
       />
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-      </div>
-    </mdb-carousel-item>
-    <mdb-carousel-item>
-      <img
-        src="https://mdbootstrap.com/img/Photos/Slides/img%20(22).webp"
-        class="d-block w-100"
-        alt="..."
-      />
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </div>
-    </mdb-carousel-item>
-    <mdb-carousel-item>
-      <img
-        src="https://mdbootstrap.com/img/Photos/Slides/img%20(23).webp"
-        class="d-block w-100"
-        alt="..."
-      />
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        <h5>{{elt.name}}</h5>
+        <p>{{elt.description}}</p>
       </div>
     </mdb-carousel-item>
   </mdb-carousel>
 </div>
-<div class="alert alert-info div2">
+</div>
+
+
+
+
+
+
+
+<div class="alert alert-light div2">
+
+  <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+    </symbol>
+    <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+    </symbol>
+    <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+    </symbol>
+  </svg>
+  
+  <div class="alert alert-primary d-flex align-items-center" role="alert">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:"><use xlink:href="#info-fill"/></svg>
+    <div>
+      An example alert with an icon
+    </div>
+  </div>
+  <div class="alert alert-success d-flex align-items-center" role="alert">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
+    <div>
+      An example success alert with an icon
+    </div>
+  </div>
+  <div class="alert alert-warning d-flex align-items-center" role="alert">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+    <div>
+      An example warning alert with an icon
+    </div>
+  </div>
+  <div class="alert alert-danger d-flex align-items-center" role="alert">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+    <div>
+      An example danger alert with an icon
+    </div>
+  </div>
+</div>
+<!--
+<div class="alert alert-light" role="alert">
+  <div class="m-5 w-90">
     <nav class="nav flex-column">
       <a class="nav-link active" href="#">Viande Braisé au charbon</a>
       <a class="nav-link" href="#">Accompagnement</a>
@@ -59,6 +93,5 @@
       <a class="nav-link disabled">Plat marocain</a>
       <a class="nav-link disabled">Casse croute</a>
     </nav>
-  
-</div>
+  </div>-->
 </div>
