--- a/Ecommerce/src/app/affiche-produit/affiche-produit.component.html
+++ b/Ecommerce/src/app/affiche-produit/affiche-produit.component.html
@@ -1,7 +1,10 @@
 
 <app-carousel></app-carousel>
 
-<div class="bcontainer">
+
+
+
+<div class="produit-container">
 
 
 <div [ngClass]="{'alert alert-success text-center sticky-top': message!==''}">{{message}}</div>
@@ -9,8 +12,8 @@
 <div *ngFor="let level of categorie">
   
   <h5 class="titre">{{level[0].categorie}}</h5>
-<div class="container" >
 
+<div class="container">
     <div class="card" style="width: auto" *ngFor="let produit of level; let i =index">
       <ng-container >
         <img src="{{produit.photo}}" class="card-img-top" alt="...">
@@ -19,12 +22,32 @@
           <p class="card-text">{{produit.description}}</p>
           <p class="card-text-prix">{{produit.prix}} DH</p>
           <a class="btn btn-outline-primary btn-lg me-2" (click)="display(produit)">Voir</a>
-         <!-- <button class="{{ (!produit.selected)? 'btn btn-warning': 'clicked'}}" (click)="selected(produit)">Ajout panier</button>-->
-        </div>
+  </div>
       </ng-container>
     </div>
-    </div>
+  </div>
 </div>
 
 
 </div>
+
+<div class="produit-annexe"></div>
+
+<!--<div class="form">
+
+  <div class="contact">
+    <img src="../../assets/img/slider/steak2.jpg">
+    
+  </div>
+  
+  <div class=" inscrire">
+    <p class="mb-5">Rester informer de nos nouveaux produits </p>
+<form>
+ <div class="form-group">
+  <input type="text" name="email" class="form-control mt-3" placeholder="Entrer email">
+ </div> 
+  <button class="btn btn-lg btn-outline-warning mt-3">S'inscrire</button>
+</form>
+
+  </div>
+</div>-->
