--- a/Ecommerce/src/app/affiche-produit/affiche-produit.component.scss
+++ b/Ecommerce/src/app/affiche-produit/affiche-produit.component.scss
@@ -1,31 +1,72 @@
+/*.form{
+   background-color: azure;
+  // border: 1px solid black;
+   width: 100%;
+   height: 400px;
+   margin:20px auto;
+   display: grid;
+   grid-template-columns: auto auto;
 
-.bcontainer{
-    width: 85%;
-    margin: auto;
-}
-.container{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr) ;
-    gap: 10px;
-    width: 100%;
-  
    
-    
+   .inscrire{
+    padding: 80px;
+    font-size: 30px;
+    background-color: #fff;
+    font-weight: bold;
+   }
+
+   img{
+    width:550px;
+    height: 400px;
+    opacity: 0,3%;
+    padding: 5px;
+    border-radius: 5px;
+   }
 }
 
-.titre{
-    margin-top: 20px;
-    margin-bottom: 15px;
-    color: rgb(61, 61, 61);
-}
-img{
-    width:auto;
-    height: 30vh;
+*/
+
+.produit-container{
+   // background-color: azure;
+   // border: 1px solid black;
+    width: 100%;
+    height: auto;
     padding:5px;
-    border-radius: 10%;
+   
+/* To place the letter at the center */
+  display: grid;
+  //place-items: center;
+  .trait{
+    border: 3px solid gray;
+    width:100%;
+  }
+  .titre{
+    padding: 15px;
+
+   }
+  .container{
+    display:grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap:10px;
+
+    img{
+        width:200px;
+        height:150px;
+        padding:10px;
+        align-self: center;
+        border-radius: 10%;
+    }
+  }
 }
-.card-text-prix{
-    font-size: large;
-    font-weight: bold;
-    color:blue;
+
+
+.produit-annexe{
+    background-color: yellow;
+    border: 1px solid black;
+    width: 100%;
+    height: 20rem;
+
+/* To place the letter at the center */
+  //display: grid;
+  //place-items: center;
 }
