--- a/Ecommerce/src/app/carousel/carousel.component.html
+++ b/Ecommerce/src/app/carousel/carousel.component.html
@@ -1,9 +1,7 @@
 <div class="container-carousel">
 
   
-<div class="alert alert-primary d-flex align-items-center div2" role="alert">
- 
-  <div>
+  <div class="div1">
     Menu <hr>
   
     <nav class="nav flex-column">
@@ -16,15 +14,15 @@
       <a class="nav-link" href="#">Casse croute</a>
     </nav>
   </div>
-</div>
+
 
 <div class="carousel" >
-  <div class="alert alert-light">
+  
   <mdb-carousel [controls]="true" [indicators]="true" [animation]="'fade'" >
     <mdb-carousel-item *ngFor="let elt of carousel">
       <img
         src="{{elt.photo}}"
-        class="d-block w-100"
+        class="d-block w-100 sliderimg"
         alt="..."
       />
       <div class="carousel-caption d-none d-md-block">
@@ -33,8 +31,8 @@
       </div>
     </mdb-carousel-item>
   </mdb-carousel>
+
 </div>
-</div>
 
 
 
@@ -42,7 +40,7 @@
 
 
 
-<div class="alert alert-light div2">
+<div class=" div2">
 
   <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
     <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
@@ -74,6 +72,12 @@
       An example warning alert with an icon
     </div>
   </div>
+  <div class="alert alert-light d-flex align-items-center" role="alert">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+    <div>
+      An example danger alert with an icon
+    </div>
+  </div>
   <div class="alert alert-danger d-flex align-items-center" role="alert">
     <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
     <div>
@@ -81,17 +85,4 @@
     </div>
   </div>
 </div>
-<!--
-<div class="alert alert-light" role="alert">
-  <div class="m-5 w-90">
-    <nav class="nav flex-column">
-      <a class="nav-link active" href="#">Viande Braisé au charbon</a>
-      <a class="nav-link" href="#">Accompagnement</a>
-      <a class="nav-link" href="#">Boisson chaude et froide</a>
-      <a class="nav-link disabled">Plat sur commande</a>
-      <a class="nav-link disabled">Carte à vin</a>
-      <a class="nav-link disabled">Plat marocain</a>
-      <a class="nav-link disabled">Casse croute</a>
-    </nav>
-  </div>-->
 </div>
