--- a/Ecommerce/src/styles.scss
+++ b/Ecommerce/src/styles.scss
@@ -4,7 +4,18 @@
 
 @import "~bootstrap/scss/bootstrap";
 
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 
 body{
     background-color:rgba(211, 211, 211, 0.3);
+    font-family: sans-serif;
+    font-size: 14px;
+    width: 100%;
+    min-height: 100vh;
   }
+
+  
