--- a/Ecommerce/src/app/carousel/carousel.component.html
+++ b/Ecommerce/src/app/carousel/carousel.component.html
@@ -12,7 +12,10 @@
       <a class="nav-link" href="#">Carte à vin</a>
       <a class="nav-link" href="#">Plat marocain</a>
       <a class="nav-link" href="#">Casse croute</a>
+      <a class="nav-link" href="#">Plat marocain</a>
+      <a class="nav-link" href="#">Casse croute</a>
     </nav>
+    
   </div>
 
 
