--- a/Ecommerce/src/app/nav/nav.component.html
+++ b/Ecommerce/src/app/nav/nav.component.html
@@ -1,56 +1,39 @@
 
-<ul class="nav justify-content-center bg-dark">
+<ul class="nav navbar-dark justify-content-center bg-dark">
+    
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">Active</a>
+      <a class="nav-link active" (click)="goTo('/produit')" >Produit</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link" (click)="goTo('/contact')">Contact</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled">Disabled</a>
-    </li>
+   
   </ul>
 
+
   
-<nav class="navbar navbar-expand-lg bg-light ">
-  <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/produit">Ecommerce</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/produit">Produit</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-success me-2" type="submit">Search</button>
-      </form>
-      <button class="btn btn-danger me-2 " type="submit">Logout</button>
-      <button class="btn btn-warning " routerLink="panier" type="submit"><span><i class="fas fa-shopping-cart"></i></span>Panier</button>
-    </div>
-  </div>
+<nav class="navbar navbar-expand-sm bg-light justify-content-center ">
+  <a class="navbar-brand mx-3" routerLink="/produit">Ecommerce</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse me-3 mx-3" id="collapsibleNavbar">
+    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+      
+        <input class="form-control me-2" type="search" placeholder="Search"  aria-label="Search" #search>
+       <!-- <button class="btn btn-outline-success btn-md me-2" (click)="Search(search.value)" type="submit">Search</button>-->
+        <button class="btn btn-primary" (click)="openModal(search.value)">Recherche</button>
+    </ul>
+  
+    <button *ngIf="islogged" class="btn btn-outline-danger me-2 " type="submit">Logout</button>
+    <button *ngIf="!islogged" class="btn btn-outline-primary me-2 " type="submit">LogIn</button>
+    
+    <button class="btn btn-warning " routerLink="panier" type="submit"><span><i class="fas fa-shopping-cart"></i></span>Panier</button>
+  
+  </div>  
 </nav>
+
+
+
+  
 
