--- a/Ecommerce/src/app/details-produit/details-produit.component.html
+++ b/Ecommerce/src/app/details-produit/details-produit.component.html
@@ -37,7 +37,7 @@
 <button class="btn btn-outline-primary mx-5 mb-2 mt-3" (click)="onBack()">Ajouter Produit</button>
 
 
-<div [ngClass]="{'alert alert-success text-center sticky-top': message!==''}">{{message}}</div>
+<!--<div [ngClass]="{'alert alert-success text-center sticky-bottom': message}">{{message}}</div>-->
 <div class="container">
 
   <div class="row">
