--- a/Ecommerce/src/app/app.component.html
+++ b/Ecommerce/src/app/app.component.html
@@ -7,5 +7,7 @@
 
 </div>
 
+<div #active *ngIf="affichemessage" [ngClass]="{'alert alert-success text-center sticky-bottom': messages}">{{messages}}</div>
+
 
 <app-footer></app-footer>
