--- a/Ecommerce/src/app/nav/nav.component.html
+++ b/Ecommerce/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
 <ul class="nav navbar-dark justify-content-center bg-dark">
     
     <li class="nav-item">
-      <a class="nav-link active" (click)="goTo('/produit')" >Produit</a>
+      <a class="nav-link" (click)="goTo('/produit')" >Produit</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" (click)="goTo('/contact')">Contact</a>
@@ -32,8 +32,6 @@
   
   </div>  
 </nav>
-
-
 
   
 
