--- a/Ecommerce/src/app/app.component.scss
+++ b/Ecommerce/src/app/app.component.scss
@@ -1,19 +1,14 @@
 .global-container{
-    display: grid;
-    //gap: 20px;
-    height: auto;
-    width: 95%;
-    margin: 0px auto;
-    padding: 10px;
-   // background-color: #fff;
-    
-  
-  // each box is 200px by 200px
-  grid-template-rows: auto auto 100px;
+  //container
+  display: grid;   
+  //background-color: #000;
+  width: 95%;
+  grid-template-rows: repeat(3,1fr);
+  grid-auto-rows: minmax(1fr, auto);
+  margin: auto;
+  height: 150rem;
+
    
-  
-  //  Change values 👇  to experiment
-    justify-items : center;
-    align-items:start;
+   
 
 }
