--- a/Ecommerce/src/app/affiche-produit/affiche-produit.component.scss
+++ b/Ecommerce/src/app/affiche-produit/affiche-produit.component.scss
@@ -26,15 +26,15 @@
 
 */
 
-.produit-container{
-  // background-color: azure;
+.produit_container{
    margin-top: 20px;
    margin-bottom: 20px;
 
+
+  @media (min-width:400px){
   .container{
     display:grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-auto-rows: minmax(50px,auto);
+    grid-template-columns: repeat(2, 1fr);
     gap:10px;
     padding: 10px ;
     
@@ -46,17 +46,24 @@
     }
   }
 }
-
-
-.produit-annexe{
-    background-color: yellow;
-   // border: 1px solid black;
+@media (min-width:750px){
+  .container{
+    grid-template-columns: repeat(3, 1fr);
+  
+  }
+}
+@media (min-width:900px){
+  .container{
+    grid-template-columns: repeat(5, 1fr); 
    
-    height: 30rem;
-    padding: 5px;
-   
+  }
+}
 
-/* To place the letter at the center */
-  //display: grid;
-  //place-items: center;
+}
+
+.produit_annexe{
+    background-color: #fff;   
+    height: 10rem;
+    
+   
 }
