--- a/Ecommerce/src/app/app.component.scss
+++ b/Ecommerce/src/app/app.component.scss
@@ -1,14 +1,18 @@
-.global-container{
-  //container
-  display: grid;   
-  //background-color: #000;
-  width: 95%;
-  grid-template-rows: repeat(3,1fr);
-  grid-auto-rows: minmax(1fr, auto);
-  margin: auto;
-  height: 150rem;
 
-   
-   
+@media (min-width:900px){
+
+  .global_container{
+    //container
+    display: grid;   
+    //background-color: #000;
+    width: 95%;
+    grid-template-rows: repeat(3,1fr);
+    grid-auto-rows: minmax(1fr, auto);
+    margin: auto;
+    padding:10px;
+    height: 150rem;
+}
+  
 
 }
+
