--- a/Ecommerce/src/app/affiche-produit/affiche-produit.component.html
+++ b/Ecommerce/src/app/affiche-produit/affiche-produit.component.html
@@ -4,7 +4,7 @@
 <div class="produit_container">
 <div *ngFor="let level of categorie">
   
-  <h5 class="titre">{{level[0].categorie}}</h5>
+  <h3 class="m-2 text-muted text-center">{{level[0].categorie}}</h3>
 
 <div class="container">
     <div class="card" *ngFor="let produit of level; let i =index">
@@ -22,7 +22,4 @@
 </div>
 
 
-</div>
-
-<div class="produit_annexe">
 </div>
