--- a/Ecommerce/src/app/affiche-produit/affiche-produit.component.scss
+++ b/Ecommerce/src/app/affiche-produit/affiche-produit.component.scss
@@ -1,34 +1,7 @@
-/*.form{
-   background-color: azure;
-  // border: 1px solid black;
-   width: 100%;
-   height: 400px;
-   margin:20px auto;
-   display: grid;
-   grid-template-columns: auto auto;
-
-   
-   .inscrire{
-    padding: 80px;
-    font-size: 30px;
-    background-color: #fff;
-    font-weight: bold;
-   }
-
-   img{
-    width:550px;
-    height: 400px;
-    opacity: 0,3%;
-    padding: 5px;
-    border-radius: 5px;
-   }
-}
-
-*/
 
 .produit_container{
-   margin-top: 20px;
-   margin-bottom: 20px;
+   width: 95%;
+   margin: 20px auto 20px auto;
 
 
   @media (min-width:400px){
