--- a/Ecommerce/src/app/carousel-footer/carousel-footer.component.html
+++ b/Ecommerce/src/app/carousel-footer/carousel-footer.component.html
@@ -1,7 +1,8 @@
 
-<div class="produit-annexe">
+<div class="produit_annexe">
+  <h3 class="m-2 text-muted text-center">Vos plats favoris</h3>
   <div class="container my-5">
-    
+   
   
   <!--Carousel Wrapper-->
   <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
@@ -33,10 +34,11 @@
               <img class="card-img-top" src="{{elt[0].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-primary">Button</a>
+                <h4 class="card-title"> {{elt[0].name}}</h4>
+                <p class="card-text">{{elt[0].description}}</p>
+                
+                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[0])">Voir</a>
+                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[0])">Ajouter Panier</a>
               </div>
             </div>
           </div>
@@ -46,10 +48,11 @@
               <img class="card-img-top" src="{{elt[1].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-primary">Button</a>
+                <h4 class="card-title">{{elt[1].name}}</h4>
+                <p class="card-text">{{elt[1].description}}</p>
+                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[1])">Voir</a>
+                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[1])">Ajouter Panier</a>
+              
               </div>
             </div>
           </div>
@@ -59,10 +62,11 @@
               <img class="card-img-top" src="{{elt[2].photo}}"
               alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-primary">Button</a>
+                <h4 class="card-title">{{elt[2].name}}</h4>
+                <p class="card-text">{{elt[2].description}}</p>
+                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[2])">Voir</a>
+                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[2])">Ajouter Panier</a>
+              
               </div>
             </div>
           </div>
@@ -80,10 +84,11 @@
               <img class="card-img-top" src="{{elt[3].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-primary">Button</a>
+                <h4 class="card-title">{{elt[3].name}}</h4>
+                <p class="card-text">{{elt[3].description}}</p>
+                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[3])">Voir</a>
+                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[3])">Ajouter Panier</a>
+              
               </div>
             </div>
           </div>
@@ -93,10 +98,11 @@
               <img class="card-img-top" src="{{elt[4].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-primary">Button</a>
+                <h4 class="card-title">{{elt[4].name}}</h4>
+                <p class="card-text">{{elt[4].description}}</p>
+                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[4])">Voir</a>
+                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[4])">Ajouter Panier</a>
+              
               </div>
             </div>
           </div>
@@ -106,10 +112,11 @@
               <img class="card-img-top" src="{{elt[5].photo}}"
                alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-primary">Button</a>
+                <h4 class="card-title">{{elt[5].name}}</h4>
+                <p class="card-text">{{elt[5].description}}</p>
+                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[5])">Voir</a>
+                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[5])">Ajouter Panier</a>
+              
               </div>
             </div>
           </div>
@@ -124,39 +131,42 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card mb-2">
-              <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/Food/4-col/img%20(53).jpg"
+              <img class="card-img-top" src="{{elt[6].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-primary">Button</a>
+                <h4 class="card-title">{{elt[6].name}}</h4>
+                <p class="card-text">{{elt[6].description}}</p>
+                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[6])">Voir</a>
+                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[6])">Ajouter Panier</a>
+              
               </div>
             </div>
           </div>
   
           <div class="col-md-4 clearfix d-none d-md-block">
             <div class="card mb-2">
-              <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/Food/4-col/img%20(45).jpg"
+              <img class="card-img-top" src="{{elt[7].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-primary">Button</a>
+                <h4 class="card-title">{{elt[7].name}}</h4>
+                <p class="card-text">{{elt[7].description}}</p>
+                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[7])">Voir</a>
+                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[7])">Ajouter Panier</a>
+              
               </div>
             </div>
           </div>
   
           <div class="col-md-4 clearfix d-none d-md-block">
             <div class="card mb-2">
-              <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/Food/4-col/img%20(51).jpg"
+              <img class="card-img-top" src="{{elt[8].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a class="btn btn-primary">Button</a>
+                <h4 class="card-title">{{elt[8].name}}</h4>
+                <p class="card-text">{{elt[8].description}}</p>
+                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[8])">Voir</a>
+                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[8])">Ajouter Panier</a>
+              
               </div>
             </div>
           </div>
