--- a/Ecommerce/src/app/details-produit/details-produit.component.html
+++ b/Ecommerce/src/app/details-produit/details-produit.component.html
@@ -1,51 +1,17 @@
-<!--
- <div style="background-color:rgba(255, 166, 0, 0.1);">
-  
-  <h5>Détails Produit<button class="btn btn-outline-primary mx-5 mb-2 mt-3" (click)="onBack()">Retour</button>
-  </h5>
-  <div [ngClass]="{'alert alert-success text-center sticky-top': message!==''}">{{message}}</div>
-    
-<div class="container-detail">
-  
-  <div class="card text-bg-light mb-3 mt-4" *ngFor="let produit of singleProduit">
-    <img src="{{produit.photo}}" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">{{produit.name | titlecase}} - {{produit.prix*count}} DH</h5>
-      <p class="card-text">Allergène : </p>
-      <span><button class="btn btn-outline-primary me-3" (click)="Dcounter()">-</button>{{count}}<button class="btn btn-outline-primary mx-3" (click)="counter()">+</button></span>
-    </div>
-    <ul class="list-group list-group-flush">
-     
-      <li class="list-group-item">{{produit.description}}</li>
-    </ul>
-    <div class="card-body">
-      <a href="#" class="card-link">Ratings</a>
-   </div>
-    <button class="btn btn-warning btn-lg mb-2" (click)="AjoutPanier(produit)">Ajout panier</button>
-  </div>
-</div>
-</div>
-
-
-
-
--->
-
-
 
 
 <button class="btn btn-outline-primary mx-5 mb-2 mt-3" (click)="onBack()">Ajouter Produit</button>
 
 
 <!--<div [ngClass]="{'alert alert-success text-center sticky-bottom': message}">{{message}}</div>-->
-<div class="container">
+<div class="container_details mb-5">
 
   <div class="row">
   
    <div class="col-md-8">
-    <div  class="alert alert-info"><h3>Détails Produit </h3></div>
+    <h3 class="alert alert-primary">Détails Produit </h3>
  
-     <div class="card text-bg mb-3" *ngFor="let produit of singleProduit; let i =index">
+     <div class="card alert-light text-bg mb-3" *ngFor="let produit of singleProduit; let i =index">
         <div class="row g-0">
           <div class="col-md-4">
             <img src="{{produit.photo}}" class="img-fluid rounded-start" alt="...">
@@ -58,11 +24,11 @@
               
               <p class="card-text mx-2">
                 <button class="btn btn-outline-info me-2" (click)="Dcounter()">-</button>{{count}}<button class="btn btn-outline-info mx-2" (click)="counter()">+</button>
-                <label class="alert alert-light prix mx-5">Prix : {{produit.prix*count}} Dhs</label></p>
+                <label class="alert alert-light mx-5">Prix : {{produit.prix*count}} Dhs</label></p>
               
-              <p class="card-text">                
-              <button class="btn btn-primary btn-lg float-end" (click)="AjoutPanier(produit)">Ajouter au panier</button>
-              </p>
+                            
+              <button class="btn btn-primary btn-lg float-end mb-2" (click)="AjoutPanier(produit)">Ajouter au panier</button>
+           
               
                </div>
           </div>
@@ -71,17 +37,18 @@
        
       </div>
     </div>
-    <div class="col-md-4 alert-info p-4">
+    <div class="col-md-4 p-4">
 
         <h4 class="alert-heading">LIVRAISON</h4>
         <hr>
         
-       <p class="mt-2">Frais de livraison non inclus à ce stade. Livraison <b>immédiate</b>.<br>Dépendant de votre localisation.</p>
-       <p>Taux d'expédition des commandes: Excellent. </p> 
-       <p>Score Qualité: Excellent</p>
-        
-        <p>Avis des consommateurs: Excellent</p>
-            <button type="button" class="btn btn-outline-primary btn-lg mt-3 m-3" routerLink="/panier">
+       <p class="alert alert-warning mt-2">Frais de livraison non inclus à ce stade. Livraison <b>immédiate</b>.<br>Dépendant de votre localisation.</p>
+       <p class="alert alert-primary">
+        Taux d'expédition des commandes: Excellent.<br>
+        Score Qualité: Excellent.<br>        
+        Avis des consommateurs: Excellent</p>
+        <p class="alert alert-danger">Merci de noter que <b>les frais de livraison</b> sont à la charge du client.</p>
+            <button type="button" class="btn btn-warning btn-lg m-auto w-auto float-end" routerLink="/panier">
            Voir Panier
         </button>
       </div>
