--- a/Ecommerce/src/app/details-produit/details-produit.component.scss
+++ b/Ecommerce/src/app/details-produit/details-produit.component.scss
@@ -1,5 +1,28 @@
 
 
+@media (min-width:900px) {
+
+   .container_details{        
+    background-color: #fff;
+    padding: 20px;
+    width: 95%;
+    margin: auto;
+
+
+    display: flex;
+    label{
+        font-size: 24px;
+    }
+   
+
+   img{
+    height: auto;
+   }
+   
+     }
+    
+}
+/*
 h5{
     margin: 15px;
 }
@@ -36,3 +59,4 @@ h5{
     }
     
 }
+*/
