--- a/Ecommerce/src/app/panier/panier.component.scss
+++ b/Ecommerce/src/app/panier/panier.component.scss
@@ -1,32 +1,8 @@
+.container{
+    background-color: #fff;
+    padding: 10px;
 
-
-h5{
-    margin: 15px;
-}
-.text{
-    font-size: 24px;
-    font-weight: bold;
-}
-.card{
-    height: 17vh;
-    
-
-    img{
-        width:25vh;
-        height: 15vh;
-        padding: 5px;
-        border-radius: 10%;
-    }
-    .card-title{
-        font-size: 24px;
-
-
-    }
-    .card-text{
-        font-size: 20px;
-        font-weight: bold;
-    }
-    .text-muted{
-        font-size: medium;
+    .row{
+        padding: 10px;
     }
 }
