--- a/Ecommerce/src/styles.scss
+++ b/Ecommerce/src/styles.scss
@@ -15,7 +15,7 @@ body{
     font-family: sans-serif;
     font-size: 14px;
     width: 100%;
-    min-height: 100vh;
+    min-height: 300px;
   }
 
   
