--- a/Ecommerce/src/app/auth/login/login.component.html
+++ b/Ecommerce/src/app/auth/login/login.component.html
@@ -1,1 +1,31 @@
-<p>login works!</p>
+<div class="modal-header right">
+    <h5 class="modal-title" id="exampleModalLabel">{{title}}</h5>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modalRef.close()"
+    ></button>
+  </div>
+ 
+  <div class="modal-body">
+
+  <form [formGroup]="LoginForm" (click)="login()">
+    <div class="form-floating mb-3">
+      <input type="email" class="form-control" formControlName="email" id="floatingIn" placeholder="name@example.com">
+      <label for="floatingIn">Email</label>
+    </div>
+    <div class="form-floating mb-3">
+      <input type="password" class="form-control" formControlName="password" id="floatingpass" placeholder="Password">
+      <label for="floatingpass">Mot de passe</label>
+    </div>
+    <button type="button" class="btn btn-primary" [disabled]="LoginForm.invalid">Login</button>
+  </form>
+
+
+    </div>
+   
+  <div class="modal-footer">
+    <button type="button" class="btn btn-danger mx-5" (click)="modalRef.close()">Annuler</button>
+   
+  </div>
