--- a/Ecommerce/src/app/carousel-footer/carousel-footer.component.html
+++ b/Ecommerce/src/app/carousel-footer/carousel-footer.component.html
@@ -34,11 +34,11 @@
               <img class="card-img-top" src="{{elt[0].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title"> {{elt[0].name}}</h4>
+                <h4 class="card-title"> {{elt[0].name}} - {{ elt[0].prix}} Dhs</h4>
                 <p class="card-text">{{elt[0].description}}</p>
                 
-                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[0])">Voir</a>
-                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[0])">Ajouter Panier</a>
+               
+                <a class="btn btn-warning" (click)="AjouterPanier(elt[0])">Ajouter Panier</a>
               </div>
             </div>
           </div>
@@ -48,10 +48,9 @@
               <img class="card-img-top" src="{{elt[1].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[1].name}}</h4>
+                <h4 class="card-title">{{elt[1].name}} - {{ elt[1].prix}} Dhs</h4>
                 <p class="card-text">{{elt[1].description}}</p>
-                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[1])">Voir</a>
-                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[1])">Ajouter Panier</a>
+                <a class="btn btn-warning" (click)="AjouterPanier(elt[1])">Ajouter Panier</a>
               
               </div>
             </div>
@@ -62,10 +61,9 @@
               <img class="card-img-top" src="{{elt[2].photo}}"
               alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[2].name}}</h4>
+                <h4 class="card-title">{{elt[2].name}} - {{ elt[2].prix}} Dhs</h4>
                 <p class="card-text">{{elt[2].description}}</p>
-                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[2])">Voir</a>
-                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[2])">Ajouter Panier</a>
+                <a class="btn btn-warning" (click)="AjouterPanier(elt[2])">Ajouter Panier</a>
               
               </div>
             </div>
@@ -84,10 +82,9 @@
               <img class="card-img-top" src="{{elt[3].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[3].name}}</h4>
+                <h4 class="card-title">{{elt[3].name}} - {{ elt[3].prix}} Dhs</h4>
                 <p class="card-text">{{elt[3].description}}</p>
-                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[3])">Voir</a>
-                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[3])">Ajouter Panier</a>
+                <a class="btn btn-warning"  (click)="AjouterPanier(elt[3])">Ajouter Panier</a>
               
               </div>
             </div>
@@ -98,10 +95,9 @@
               <img class="card-img-top" src="{{elt[4].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[4].name}}</h4>
+                <h4 class="card-title">{{elt[4].name}} - {{ elt[4].prix}} Dhs</h4>
                 <p class="card-text">{{elt[4].description}}</p>
-                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[4])">Voir</a>
-                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[4])">Ajouter Panier</a>
+                <a class="btn btn-warning"  (click)="AjouterPanier(elt[4])">Ajouter Panier</a>
               
               </div>
             </div>
@@ -112,10 +108,9 @@
               <img class="card-img-top" src="{{elt[5].photo}}"
                alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[5].name}}</h4>
+                <h4 class="card-title">{{elt[5].name}} - {{ elt[5].prix}} Dhs</h4>
                 <p class="card-text">{{elt[5].description}}</p>
-                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[5])">Voir</a>
-                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[5])">Ajouter Panier</a>
+                <a class="btn btn-warning"  (click)="AjouterPanier(elt[5])">Ajouter Panier</a>
               
               </div>
             </div>
@@ -134,10 +129,9 @@
               <img class="card-img-top" src="{{elt[6].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[6].name}}</h4>
+                <h4 class="card-title">{{elt[6].name}} - {{ elt[6].prix}} Dhs</h4>
                 <p class="card-text">{{elt[6].description}}</p>
-                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[6])">Voir</a>
-                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[6])">Ajouter Panier</a>
+                <a class="btn btn-warning"  (click)="AjouterPanier(elt[6])">Ajouter Panier</a>
               
               </div>
             </div>
@@ -148,10 +142,9 @@
               <img class="card-img-top" src="{{elt[7].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[7].name}}</h4>
+                <h4 class="card-title">{{elt[7].name}} - {{ elt[7].prix}} Dhs</h4>
                 <p class="card-text">{{elt[7].description}}</p>
-                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[7])">Voir</a>
-                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[7])">Ajouter Panier</a>
+                <a class="btn btn-warning" (click)="AjouterPanier(elt[7])">Ajouter Panier</a>
               
               </div>
             </div>
@@ -162,10 +155,9 @@
               <img class="card-img-top" src="{{elt[8].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[8].name}}</h4>
+                <h4 class="card-title">{{elt[8].name}} - {{ elt[8].prix}} Dhs</h4>
                 <p class="card-text">{{elt[8].description}}</p>
-                <a class="btn btn-primary" [hidden]="hide" (click)="displaydetails(elt[8])">Voir</a>
-                <a class="btn btn-warning" [hidden]="!hide" (click)="AjouterPanier(elt[8])">Ajouter Panier</a>
+                <a class="btn btn-warning"  (click)="AjouterPanier(elt[8])">Ajouter Panier</a>
               
               </div>
             </div>
