--- a/Ecommerce/src/app/modal-alert/modal-alert.component.html
+++ b/Ecommerce/src/app/modal-alert/modal-alert.component.html
@@ -1,19 +1,59 @@
-<div class="modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+
+<div class="container_details m-2">
+  
+  <button
+  type="button"
+  class="btn-close float-end"
+  aria-label="Close"
+  (click)="modalRef2.close()"
+></button>
+  <div class="row">
+  
+   <div class="col-md-8">
+    <h3 class="alert alert-primary">Détails Produit </h3>
+ 
+     <div class="card alert-light text-bg mb-3" >
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="{{produit?.photo}}" class="img-fluid rounded-start" alt="photo produit">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+             
+              <h5 class="card-title">{{produit?.name | titlecase}} - {{produit?.description}} </h5>
+              <p class="card-text"><small class="text-muted">Allergène :{{produit?.allergene}}</small></p>
+              
+              <p class="card-text mx-2">
+                <button class="btn btn-outline-info me-2" (click)="Dcounter()">-</button>{{count}}<button class="btn btn-outline-info mx-2" (click)="counter()">+</button>
+                <label class="alert alert-light prix">{{totalPrix * count}} Dhs</label></p>
+                      
+               </div>
+               
+          </div>
+          <button class="btn btn-primary btn-lg float-end mb-2" (click)="AjoutPanier()">Ajouter au panier</button>
+          
         </div>
-        <div class="modal-body">
-          <p>Modal body text goes here.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary">Save changes</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
+       
       </div>
     </div>
-  </div>
+    <div class="col-md-4 p-4">
+
+        <h4 class="alert-heading">LIVRAISON</h4>
+        <hr>
+        
+       <p class="alert alert-warning mt-2">Frais de livraison non inclus à ce stade. Livraison <b>immédiate</b>.<br>Dépendant de votre localisation.</p>
+       <p class="alert alert-primary">
+        Taux d'expédition des commandes: Excellent.<br>
+        Score Qualité: Excellent.<br>        
+        Avis des consommateurs: Excellent</p>
+        <p class="alert alert-danger">Merci de noter que <b>les frais de livraison</b> sont à la charge du client.</p>
+      
+
+        <button type="button" class="btn btn-warning btn-lg" (click)="AfficherPanier()">
+          Voir Panier
+       </button>
+      </div>
+     
+<div [ngClass]="{'alert alert-info text-center sticky-bottom': messages}">{{messages}}</div>
+
+    </div>
