travail sur panier

--- a/Ecommerce/src/app/affiche-produit/affiche-produit.component.html
+++ b/Ecommerce/src/app/affiche-produit/affiche-produit.component.html
@@ -14,7 +14,7 @@
           <h5 class="card-title">{{produit.name}}</h5>
           <p class="card-text">{{produit.description}}</p>
           <p class="card-text-prix">{{produit.prix}} DH</p>
-          <a class="btn btn-outline-primary btn-lg me-2" (click)="display(produit)">Voir</a>
+          <a class="btn btn-outline-primary btn-lg me-2" (click)="AfficherModal(produit)">Voir</a>
   </div>
       
     </div>
