--- a/Ecommerce/src/app/details-produit/details-produit.component.html
+++ b/Ecommerce/src/app/details-produit/details-produit.component.html
@@ -48,9 +48,9 @@
         Score Qualité: Excellent.<br>        
         Avis des consommateurs: Excellent</p>
         <p class="alert alert-danger">Merci de noter que <b>les frais de livraison</b> sont à la charge du client.</p>
-            <button type="button" class="btn btn-warning btn-lg m-auto w-auto float-end" routerLink="/panier">
+          <!--  <button type="button" class="btn btn-warning btn-lg m-auto w-auto float-end" routerLink="/panier">
            Voir Panier
-        </button>
+        </button>-->
       </div>
      
     </div>
