--- a/Ecommerce/src/app/modal-alert/modal-alert.component.html
+++ b/Ecommerce/src/app/modal-alert/modal-alert.component.html
@@ -49,11 +49,11 @@
         <p class="alert alert-danger">Merci de noter que <b>les frais de livraison</b> sont à la charge du client.</p>
       
 
-        <button type="button" class="btn btn-warning btn-lg" (click)="AfficherPanier()">
+       <!-- <button type="button" class="btn btn-warning btn-lg" (click)="AfficherPanier()">
           Voir Panier
-       </button>
+       </button>-->
       </div>
-     
-<div [ngClass]="{'alert alert-info text-center sticky-bottom': messages}">{{messages}}</div>
+     <!--
+<div [ngClass]="{'alert alert-info text-center sticky-bottom': messages}">{{messages}}</div>-->
 
     </div>
