--- a/Ecommerce/src/app/carousel-footer/carousel-footer.component.html
+++ b/Ecommerce/src/app/carousel-footer/carousel-footer.component.html
@@ -1,5 +1,5 @@
 
-<div class="produit_annexe">
+<div class="produit_annexe" [hidden]="hideCarousel">
   <h3 class="m-2 text-muted text-center">Vos plats favoris</h3>
   <div class="container my-5">
    
@@ -34,11 +34,11 @@
               <img class="card-img-top" src="{{elt[0].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title"> {{elt[0].name}} - {{ elt[0].prix}} Dhs</h4>
+                <h4 class="card-title"> {{elt[0].name}}</h4>
                 <p class="card-text">{{elt[0].description}}</p>
                 
                
-                <a class="btn btn-warning" (click)="AjouterPanier(elt[0])">Ajouter Panier</a>
+                <a class="btn btn-info" (click)="AfficheModalAlert(elt[0])">Ajouter Panier</a>
               </div>
             </div>
           </div>
@@ -48,9 +48,9 @@
               <img class="card-img-top" src="{{elt[1].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[1].name}} - {{ elt[1].prix}} Dhs</h4>
+                <h4 class="card-title">{{elt[1].name}}</h4>
                 <p class="card-text">{{elt[1].description}}</p>
-                <a class="btn btn-warning" (click)="AjouterPanier(elt[1])">Ajouter Panier</a>
+                <a class="btn btn-info" (click)="AfficheModalAlert(elt[1])">Ajouter Panier</a>
               
               </div>
             </div>
@@ -61,9 +61,9 @@
               <img class="card-img-top" src="{{elt[2].photo}}"
               alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[2].name}} - {{ elt[2].prix}} Dhs</h4>
+                <h4 class="card-title">{{elt[2].name}}</h4>
                 <p class="card-text">{{elt[2].description}}</p>
-                <a class="btn btn-warning" (click)="AjouterPanier(elt[2])">Ajouter Panier</a>
+                <a class="btn btn-info" (click)="AfficheModalAlert(elt[2])">Ajouter Panier</a>
               
               </div>
             </div>
@@ -82,9 +82,9 @@
               <img class="card-img-top" src="{{elt[3].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[3].name}} - {{ elt[3].prix}} Dhs</h4>
+                <h4 class="card-title">{{elt[3].name}}</h4>
                 <p class="card-text">{{elt[3].description}}</p>
-                <a class="btn btn-warning"  (click)="AjouterPanier(elt[3])">Ajouter Panier</a>
+                <a class="btn btn-info"  (click)="AfficheModalAlert(elt[3])">Ajouter Panier</a>
               
               </div>
             </div>
@@ -95,9 +95,9 @@
               <img class="card-img-top" src="{{elt[4].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[4].name}} - {{ elt[4].prix}} Dhs</h4>
+                <h4 class="card-title">{{elt[4].name}}</h4>
                 <p class="card-text">{{elt[4].description}}</p>
-                <a class="btn btn-warning"  (click)="AjouterPanier(elt[4])">Ajouter Panier</a>
+                <a class="btn btn-info"  (click)="AfficheModalAlert(elt[4])">Ajouter Panier</a>
               
               </div>
             </div>
@@ -108,9 +108,9 @@
               <img class="card-img-top" src="{{elt[5].photo}}"
                alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[5].name}} - {{ elt[5].prix}} Dhs</h4>
+                <h4 class="card-title">{{elt[5].name}}</h4>
                 <p class="card-text">{{elt[5].description}}</p>
-                <a class="btn btn-warning"  (click)="AjouterPanier(elt[5])">Ajouter Panier</a>
+                <a class="btn btn-info"  (click)="AfficheModalAlert(elt[5])">Ajouter Panier</a>
               
               </div>
             </div>
@@ -129,9 +129,9 @@
               <img class="card-img-top" src="{{elt[6].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[6].name}} - {{ elt[6].prix}} Dhs</h4>
+                <h4 class="card-title">{{elt[6].name}}</h4>
                 <p class="card-text">{{elt[6].description}}</p>
-                <a class="btn btn-warning"  (click)="AjouterPanier(elt[6])">Ajouter Panier</a>
+                <a class="btn btn-info"  (click)="AfficheModalAlert(elt[6])">Ajouter Panier</a>
               
               </div>
             </div>
@@ -142,9 +142,9 @@
               <img class="card-img-top" src="{{elt[7].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[7].name}} - {{ elt[7].prix}} Dhs</h4>
+                <h4 class="card-title">{{elt[7].name}}</h4>
                 <p class="card-text">{{elt[7].description}}</p>
-                <a class="btn btn-warning" (click)="AjouterPanier(elt[7])">Ajouter Panier</a>
+                <a class="btn btn-info" (click)="AfficheModalAlert(elt[7])">Ajouter Panier</a>
               
               </div>
             </div>
@@ -155,9 +155,9 @@
               <img class="card-img-top" src="{{elt[8].photo}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[8].name}} - {{ elt[8].prix}} Dhs</h4>
+                <h4 class="card-title">{{elt[8].name}}</h4>
                 <p class="card-text">{{elt[8].description}}</p>
-                <a class="btn btn-warning"  (click)="AjouterPanier(elt[8])">Ajouter Panier</a>
+                <a class="btn btn-info"  (click)="AfficheModalAlert(elt[8])">Ajouter Panier</a>
               
               </div>
             </div>
