--- a/Ecommerce/src/app/panier/panier.component.scss
+++ b/Ecommerce/src/app/panier/panier.component.scss
@@ -1,8 +1,13 @@
 .container{
     background-color: #fff;
-    padding: 10px;
+    padding: 5px;
 
     .row{
-        padding: 10px;
+        margin: 5px;
+
+        .card-text{
+
+            font-size:medium;
+        }
     }
 }
